# lib/db/src/schema/inbox.ts
@@ -6,7 +6,9 @@ export const inboxTable = pgTable("inbox", {
   id: serial("id").primaryKey(),
   fromUserId: text("from_user_id").notNull(),
   toUserId: text("to_user_id").notNull(),
-  songId: integer("song_id").notNull(),
+  songId: integer("song_id"),
+  playlistId: integer("playlist_id"),
+  playlistName: text("playlist_name"),
   message: text("message"),
   createdAt: timestamp("created_at", { withTimezone: true }).notNull().defaultNow(),
 });
